--- a/main.html
+++ b/main.html
@@ -7,6 +7,10 @@
 </head>
 
 <body>
+	<div>
+		<p>"My favourite song is <a href="https://youtu.be/JGwWNGJdvx8?si=Nn0oEnKrKnhCSVzA">Shape of you"</a></p>
+		<p>Tags: Music, Favorite Song, YouTube</p>
+	</div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
